internal/queryfile/testdata/invalid/no_queries.cypher
// This query file is a bug: it declares no annotated queries.
// Per §4.1, an empty query file is rejected — a legitimately empty file
// should just not be listed in Input.Queries.
